--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -10,7 +10,7 @@
 }
 .nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 .nav-wrapper {
   background-color: teal;
