--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -15,6 +15,10 @@
 .nav-wrapper {
   background-color: teal;
 }
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
 .scrolled {
   position: sticky;
   top: 0;
