Make cursor pointer on hover

--- a/src/components/Sidenav/NavToggle/NavToggleButton.css
+++ b/src/components/Sidenav/NavToggle/NavToggleButton.css
@@ -2,6 +2,7 @@
     position: fixed;
     padding: 15px;
     z-index: 4;
+    cursor: pointer;
   }
   @media only screen and (min-width: 601px) {
     #hamburger-icon{
